--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>test</title>
+    <title>预约体检</title>
+    <link rel="stylesheet" type="text/css" href="static/need/layer.css"/>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script type="text/javascript" src='./static/jquery-2.2.3.min.js'></script>
   </body>
 </html>
