--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script type="text/javascript" src='./static/jquery-2.2.3.min.js'></script>
+    <script type="text/javascript" src='./static/weixin-1.0.0.js'></script>
   </body>
 </html>
